<resources>
    <string name="app_name">GroceryListing</string>
    <string name="editTitleRecipeLabel">Название рецепта</string>
    <string name="editRecipeImageLabel">Изображение</string>
    <string name="editRecipeInstrLabel">Инструкция</string>
    <string name="editRecipeIngrLabel">Ингридиенты</string>
    <string name="editIngredient">Ингридиент</string>
    <string name="editAuthorRecipeLabel">Автор рецепта</string>
    <string name="editUom">Кол-во</string>
    <string name="add">+</string>
    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">TFL Detect</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>

</resources>
